Scale after extrude #65470

Closed
opened 2019-06-04 00:43:35 +02:00 by Dmitry · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-27 19:48, hash: 89207df722
Worked: (optional)

Short description of error
When you scale face straight after extrude it cause this problem 02bfd8155ee9d365d7708c54173e1e38.png it happens because coordinates for scale set to 0.0.0 by default{F7085106}. In 2.7 coordinates by default is 1.1.1, is this a bug or feature? Can we have scale like in 2.7?

Exact steps for others to reproduce the error

  1. Create any object
  2. Extrude face
  3. Scale face right after extrude but don`t move mouse

Sorry for my english :)

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-27 19:48, hash: `89207df722` Worked: (optional) **Short description of error** When you scale face straight after extrude it cause this problem ![02bfd8155ee9d365d7708c54173e1e38.png](https://archive.blender.org/developer/F7085101/02bfd8155ee9d365d7708c54173e1e38.png) it happens because coordinates for scale set to 0.0.0 by default{[F7085106](https://archive.blender.org/developer/F7085106/b410d46973ccd3ff2d2dbf441c3ae355.jpg)}. In 2.7 coordinates by default is 1.1.1, is this a bug or feature? Can we have scale like in 2.7? **Exact steps for others to reproduce the error** 1. Create any object 2. Extrude face 3. Scale face right after extrude but don`t move mouse Sorry for my english :)
Author

Added subscriber: @Tevton

Added subscriber: @Tevton

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

It's happening when you enter into Scale mode while you are in Extruding mode. In Scale mode (after extrude mode) you see this prob before any mouse movement...

Extrude Scale Prob.gif

It's happening when you enter into Scale mode while you are in Extruding mode. In Scale mode (after extrude mode) you see this prob before any mouse movement... ![Extrude Scale Prob.gif](https://archive.blender.org/developer/F7091210/Extrude_Scale_Prob.gif)
Campbell Barton self-assigned this 2019-06-07 07:46:00 +02:00

After deeply diving the codding stuff, have to know that this prob is not only in extrude -> scale but exists every time you switch form other mode to scale mode.
e.g. You are in rotate mode to then switch to scale mode, selected object/face becomes 0 scale. Also issue in both object / edit mode.
Currently when you switch to other mode loc/rot/scale becomes 0 that's making prob.
Demo
Scale make prob.gif

After deeply diving the codding stuff, have to know that this prob is not only in extrude -> scale but exists every time you switch form other mode to scale mode. e.g. You are in rotate mode to then switch to scale mode, selected object/face becomes 0 scale. Also issue in both object / edit mode. Currently when you switch to other mode loc/rot/scale becomes 0 that's making prob. **Demo** ![Scale make prob.gif](https://archive.blender.org/developer/F7097092/Scale_make_prob.gif)

The main prob is that:
(location = rotation = 0) != (Scale = 1)
Mean that default value for loc/rot is 0 and for scale is 1 which is causing prob (when switch from one to other)

The main prob is that: (location = rotation = 0) != (Scale = 1) Mean that default value for loc/rot is 0 and for scale is 1 which is causing prob (when switch from one to other)

I think, this solve the prob, Resolve unexpected behavior of transformation values when switching b/e location/rotation/scale

Only It effects the value of scale w.r.t the value of grab (in extruding process).

I think, this solve the prob, [Resolve unexpected behavior of transformation values when switching b/e location/rotation/scale ](https://developer.blender.org/D5053) Only It effects the value of scale w.r.t the value of grab (in extruding process).

This issue was referenced by 3084b4350b

This issue was referenced by 3084b4350bc9a849ace91fcefeba49ee83df59f7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65470
No description provided.