Fix T65470: Scale set to zero after extrude